[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "arborist"
description = "Github Application Server"
authors = [{name = "Teague Lasser", email = "teague@subseq.io"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
]
version = "0.2.1"
dependencies = [
    "cryptography",
    "kubernetes",
    "snekpy==1.0.0",
    "prism-client==0.2.1",
    "requests>=2.25,<3.0",
    "typing-extensions==4.10.0"
]

[project.scripts]
arborist = "arborist.cli:cli"

[project.urls]
Homepage = 'https://github.com/kraemahz/arborist'
Source = 'https://github.com/kraemahz/arborist'

[tool.setuptools.packages.find]
where = ["src"]
include = ["arborist"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.pytest.ini_options]
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
testpaths = ["tests"]
